--- a/src/parameters/triggers.yaml
+++ b/src/parameters/triggers.yaml
@@ -1,10 +1,44 @@
 '2016pre':
-    - Photon175
-    - Photon165_HE10
+    - PFHT650_WideJetMJJ900DEtaJJ1p5
+    - PFHT650_WideJetMJJ950DEtaJJ1p5
+    - PFHT800
+    - PFHT900
+    - PFJet450
+    - PFJet500
+    - AK8PFJet450
+    - AK8PFJet500
+    - AK8PFJet360_TrimMass30
+    - AK8PFHT700_TrimR0p1PT0p03Mass50
 '2016post':
-    - Photon175
-    - Photon165_HE10
+    - PFHT650_WideJetMJJ900DEtaJJ1p5
+    - PFHT650_WideJetMJJ950DEtaJJ1p5
+    - PFHT800
+    - PFHT900
+    - PFJet450
+    - PFJet500
+    - AK8PFJet450
+    - AK8PFJet500
+    - AK8PFJet360_TrimMass30
+    - AK8PFHT700_TrimR0p1PT0p03Mass50
 '2017':
-    - Photon200
+    - PFHT1050
+    - AK8PFJet500
+    - AK8PFJet360_TrimMass30
+    - AK8PFJet380_TrimMass30
+    - AK8PFJet400_TrimMass30
+    - AK8PFJet420_TrimMass30
+    - AK8PFHT750_TrimMass50
+    - AK8PFHT800_TrimMass50
+    - AK8PFHT850_TrimMass50
+    - AK8PFHT900_TrimMass50
 '2018':
-    - Photon200
+    - PFHT1050
+    - AK8PFJet500
+    - AK8PFJet360_TrimMass30
+    - AK8PFJet380_TrimMass30
+    - AK8PFJet400_TrimMass30
+    - AK8PFJet420_TrimMass30
+    - AK8PFHT750_TrimMass50
+    - AK8PFHT800_TrimMass50
+    - AK8PFHT850_TrimMass50
+    - AK8PFHT900_TrimMass50
