--- a/datasets/mc/2016pre/ZpToHG/nanov9.yaml
+++ b/datasets/mc/2016pre/ZpToHG/nanov9.yaml
@@ -1,4 +1,4 @@
-ZpToHGamma_M600: /ZprimeToHGamma-M-600_TuneCP5_13TeV-madgraph-pythia8/RunIISummer20UL16NanoAODAPVv9-106X_mcRun2_asymptotic_preVFP_v11-v1/NANOAODSIM
+#ZpToHGamma_M600: /ZprimeToHGamma-M-600_TuneCP5_13TeV-madgraph-pythia8/RunIISummer20UL16NanoAODAPVv9-106X_mcRun2_asymptotic_preVFP_v11-v1/NANOAODSIM
 ZpToHGamma_M700: /ZprimeToHGamma-M-700_TuneCP5_13TeV-madgraph-pythia8/RunIISummer20UL16NanoAODAPVv9-106X_mcRun2_asymptotic_preVFP_v11-v1/NANOAODSIM
 ZpToHGamma_M800: /ZprimeToHGamma-M-800_TuneCP5_13TeV-madgraph-pythia8/RunIISummer20UL16NanoAODAPVv9-106X_mcRun2_asymptotic_preVFP_v11-v1/NANOAODSIM
 ZpToHGamma_M900: /ZprimeToHGamma-M-900_TuneCP5_13TeV-madgraph-pythia8/RunIISummer20UL16NanoAODAPVv9-106X_mcRun2_asymptotic_preVFP_v11-v1/NANOAODSIM
