--- a/src/parameters/cross-section.yaml
+++ b/src/parameters/cross-section.yaml
@@ -86,47 +86,47 @@ ZpToHG:
   ZpToHGamma_M3000: 0.0005056
   ZpToHGamma_M3500: 0.0001897
 GluGluToZG:
-  GluGluSpin0ToZGamma_ZToQQ_M700_0p014: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M800_0p014: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M900_0p014: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M1000_0p014: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M1200_0p014: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M1400_0p014: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M1600_0p014: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M1800_0p014: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M2000_0p014: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M2200_0p014: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M2400_0p014: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M2600_0p014: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M3000_0p014: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M3500_0p014: 1e-3/0.1512
+  GluGluSpin0ToZGamma_ZToQQ_M700_0p014: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M800_0p014: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M900_0p014: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M1000_0p014: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M1200_0p014: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M1400_0p014: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M1600_0p014: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M1800_0p014: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M2000_0p014: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M2200_0p014: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M2400_0p014: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M2600_0p014: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M3000_0p014: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M3500_0p014: 1e-3
   
-  GluGluSpin0ToZGamma_ZToQQ_M700_5p6: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M800_5p6: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M900_5p6: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M1000_5p6: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M1200_5p6: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M1400_5p6: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M1600_5p6: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M1800_5p6: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M2000_5p6: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M2200_5p6: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M2400_5p6: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M2600_5p6: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M3000_5p6: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M3500_5p6: 1e-3/0.1512
+  GluGluSpin0ToZGamma_ZToQQ_M700_5p6: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M800_5p6: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M900_5p6: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M1000_5p6: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M1200_5p6: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M1400_5p6: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M1600_5p6: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M1800_5p6: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M2000_5p6: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M2200_5p6: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M2400_5p6: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M2600_5p6: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M3000_5p6: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M3500_5p6: 1e-3
 
-  GluGluSpin0ToZGamma_ZToQQ_M700_10p0: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M800_10p0: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M900_10p0: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M1000_10p0: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M1200_10p0: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M1400_10p0: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M1600_10p0: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M1800_10p0: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M2000_10p0: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M2200_10p0: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M2400_10p0: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M2600_10p0: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M3000_10p0: 1e-3/0.1512
-  GluGluSpin0ToZGamma_ZToQQ_M3500_10p0: 1e-3/0.1512
+  GluGluSpin0ToZGamma_ZToQQ_M700_10p0: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M800_10p0: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M900_10p0: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M1000_10p0: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M1200_10p0: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M1400_10p0: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M1600_10p0: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M1800_10p0: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M2000_10p0: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M2200_10p0: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M2400_10p0: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M2600_10p0: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M3000_10p0: 1e-3
+  GluGluSpin0ToZGamma_ZToQQ_M3500_10p0: 1e-3
