--- a/fit/rate_limit.yaml
+++ b/fit/rate_limit.yaml
@@ -1,255 +1,255 @@
 SR1:
   700:
-    Expected +1sigma: 0.015977026894688606
-    Expected +2sigma: 0.02495194971561432
-    Expected -1sigma: 0.004199028015136719
-    Expected -2sigma: 0.0023345947265625
-    Expected Limit: 0.00830078125
+    Expected +1sigma: 17.76428985595703
+    Expected +2sigma: 21.652450561523438
+    Expected -1sigma: 13.441699981689453
+    Expected -2sigma: 12.650146484375
+    Expected Limit: 15.0625
   800:
-    Expected +1sigma: 0.012420143000781536
-    Expected +2sigma: 0.018872160464525223
-    Expected -1sigma: 0.0033473968505859375
-    Expected -2sigma: 0.001983642578125
-    Expected Limit: 0.00634765625
+    Expected +1sigma: 1.9228882789611816
+    Expected +2sigma: 2.8816754817962646
+    Expected -1sigma: 1.0189640522003174
+    Expected -2sigma: 0.790863037109375
+    Expected Limit: 1.38671875
   900:
-    Expected +1sigma: 0.012420143000781536
-    Expected +2sigma: 0.018872160464525223
-    Expected -1sigma: 0.0033473968505859375
-    Expected -2sigma: 0.001983642578125
-    Expected Limit: 0.00634765625
+    Expected +1sigma: 2.1399118900299072
+    Expected +2sigma: 2.850174903869629
+    Expected -1sigma: 1.1841559410095215
+    Expected -2sigma: 0.94464111328125
+    Expected Limit: 1.5703125
   1000:
-    Expected +1sigma: 0.01433093473315239
-    Expected +2sigma: 0.021775569766759872
-    Expected -1sigma: 0.0038623809814453125
-    Expected -2sigma: 0.002288818359375
-    Expected Limit: 0.00732421875
+    Expected +1sigma: 1.134335994720459
+    Expected +2sigma: 1.5683050155639648
+    Expected -1sigma: 0.5528614521026611
+    Expected -2sigma: 0.4181671142578125
+    Expected Limit: 0.79296875
   1200:
-    Expected +1sigma: 0.019736329093575478
-    Expected +2sigma: 0.0308229960501194
-    Expected -1sigma: 0.005187034606933594
-    Expected -2sigma: 0.0028839111328125
-    Expected Limit: 0.01025390625
+    Expected +1sigma: 0.784701406955719
+    Expected +2sigma: 1.0972861051559448
+    Expected -1sigma: 0.37987327575683594
+    Expected -2sigma: 0.2831878662109375
+    Expected Limit: 0.541015625
   1400:
-    Expected +1sigma: 0.028158018365502357
-    Expected +2sigma: 0.04259331151843071
-    Expected -1sigma: 0.007481098175048828
-    Expected -2sigma: 0.0039825439453125
-    Expected Limit: 0.01416015625
+    Expected +1sigma: 0.6317271590232849
+    Expected +2sigma: 0.8914923667907715
+    Expected -1sigma: 0.30475521087646484
+    Expected -2sigma: 0.22628021240234375
+    Expected Limit: 0.435546875
   1600:
-    Expected +1sigma: 0.04141677916049957
-    Expected +2sigma: 0.06349559873342514
-    Expected -1sigma: 0.011307954788208008
-    Expected -2sigma: 0.00623321533203125
-    Expected Limit: 0.02099609375
+    Expected +1sigma: 0.5481578707695007
+    Expected +2sigma: 0.7759074568748474
+    Expected -1sigma: 0.2672080993652344
+    Expected -2sigma: 0.200775146484375
+    Expected Limit: 0.3779296875
   1800:
-    Expected +1sigma: 0.06184769794344902
-    Expected +2sigma: 0.09624066948890686
-    Expected -1sigma: 0.016396045684814453
-    Expected -2sigma: 0.00942230224609375
-    Expected Limit: 0.03173828125
+    Expected +1sigma: 0.4684184193611145
+    Expected +2sigma: 0.6748448610305786
+    Expected -1sigma: 0.21551513671875
+    Expected -2sigma: 0.15673828125
+    Expected Limit: 0.3134765625
   2000:
-    Expected +1sigma: 0.09039279073476791
-    Expected +2sigma: 0.14065943658351898
-    Expected -1sigma: 0.02397194504737854
-    Expected -2sigma: 0.013408660888671875
-    Expected Limit: 0.04638671875
+    Expected +1sigma: 0.42769718170166016
+    Expected +2sigma: 0.6241188049316406
+    Expected -1sigma: 0.19219577312469482
+    Expected -2sigma: 0.1393890380859375
+    Expected Limit: 0.283203125
   2200:
-    Expected +1sigma: 0.13416191935539246
-    Expected +2sigma: 0.20876821875572205
-    Expected -1sigma: 0.035579413175582886
-    Expected -2sigma: 0.019901275634765625
-    Expected Limit: 0.06884765625
+    Expected +1sigma: 0.40345585346221924
+    Expected +2sigma: 0.5948418378829956
+    Expected -1sigma: 0.17763733863830566
+    Expected -2sigma: 0.127716064453125
+    Expected Limit: 0.263671875
   2400:
-    Expected +1sigma: 0.19872228801250458
-    Expected +2sigma: 0.30797645449638367
-    Expected -1sigma: 0.05275559425354004
-    Expected -2sigma: 0.029754638671875
-    Expected Limit: 0.1015625
+    Expected +1sigma: 0.3759530186653137
+    Expected +2sigma: 0.5619491338729858
+    Expected -1sigma: 0.16162455081939697
+    Expected -2sigma: 0.11588287353515625
+    Expected Limit: 0.2431640625
   2600:
-    Expected +1sigma: 0.2971280515193939
-    Expected +2sigma: 0.46048402786254883
-    Expected -1sigma: 0.07847657799720764
-    Expected -2sigma: 0.043895721435546875
-    Expected Limit: 0.15185546875
+    Expected +1sigma: 0.3630504012107849
+    Expected +2sigma: 0.5483318567276001
+    Expected -1sigma: 0.1533212661743164
+    Expected -2sigma: 0.10894775390625
+    Expected Limit: 0.232421875
   3000:
-    Expected +1sigma: 0.6523160338401794
-    Expected +2sigma: 1.0068668127059937
-    Expected -1sigma: 0.17158865928649902
-    Expected -2sigma: 0.095977783203125
-    Expected Limit: 0.33203125
+    Expected +1sigma: 0.3417397439479828
+    Expected +2sigma: 0.527381420135498
+    Expected -1sigma: 0.13802683353424072
+    Expected -2sigma: 0.0969085693359375
+    Expected Limit: 0.2138671875
   3500:
-    Expected +1sigma: 1.941932201385498
-    Expected +2sigma: 2.9615554809570312
-    Expected -1sigma: 0.4992485046386719
-    Expected -2sigma: 0.28228759765625
-    Expected Limit: 0.9765625
+    Expected +1sigma: 0.3198763430118561
+    Expected +2sigma: 0.5018563270568848
+    Expected -1sigma: 0.12357831001281738
+    Expected -2sigma: 0.084686279296875
+    Expected Limit: 0.1953125
 SR2:
   700:
-    Expected +1sigma: 0.055909015238285065
-    Expected +2sigma: 0.08710750937461853
-    Expected -1sigma: 0.01456606388092041
-    Expected -2sigma: 0.00855255126953125
-    Expected Limit: 0.02880859375
+    Expected +1sigma: 7.923905372619629
+    Expected +2sigma: 9.316267967224121
+    Expected -1sigma: 5.316276550292969
+    Expected -2sigma: 4.2254638671875
+    Expected Limit: 6.71875
   800:
-    Expected +1sigma: 0.037564054131507874
-    Expected +2sigma: 0.057589028030633926
-    Expected -1sigma: 0.010256052017211914
-    Expected -2sigma: 0.00565338134765625
-    Expected Limit: 0.01904296875
+    Expected +1sigma: 1.375986099243164
+    Expected +2sigma: 1.977518081665039
+    Expected -1sigma: 0.6387348175048828
+    Expected -2sigma: 0.4665069580078125
+    Expected Limit: 0.92578125
   900:
-    Expected +1sigma: 0.03371133282780647
-    Expected +2sigma: 0.05168246105313301
-    Expected -1sigma: 0.00920414924621582
-    Expected -2sigma: 0.00507354736328125
-    Expected Limit: 0.01708984375
+    Expected +1sigma: 1.3397321701049805
+    Expected +2sigma: 1.9205305576324463
+    Expected -1sigma: 0.627471923828125
+    Expected -2sigma: 0.460205078125
+    Expected Limit: 0.90625
   1000:
-    Expected +1sigma: 0.03371133282780647
-    Expected +2sigma: 0.05168246105313301
-    Expected -1sigma: 0.00920414924621582
-    Expected -2sigma: 0.00507354736328125
-    Expected Limit: 0.01708984375
+    Expected +1sigma: 0.668377161026001
+    Expected +2sigma: 0.9763590097427368
+    Expected -1sigma: 0.2995603084564209
+    Expected -2sigma: 0.217254638671875
+    Expected Limit: 0.44140625
   1200:
-    Expected +1sigma: 0.037564054131507874
-    Expected +2sigma: 0.057589028030633926
-    Expected -1sigma: 0.010256052017211914
-    Expected -2sigma: 0.00565338134765625
-    Expected Limit: 0.01904296875
+    Expected +1sigma: 0.4272879660129547
+    Expected +2sigma: 0.638681173324585
+    Expected -1sigma: 0.1836937665939331
+    Expected -2sigma: 0.13170623779296875
+    Expected Limit: 0.2763671875
   1400:
-    Expected +1sigma: 0.045269500464200974
-    Expected +2sigma: 0.06940216571092606
-    Expected -1sigma: 0.0121077299118042
-    Expected -2sigma: 0.00681304931640625
-    Expected Limit: 0.02294921875
+    Expected +1sigma: 0.30741995573043823
+    Expected +2sigma: 0.47081267833709717
+    Expected -1sigma: 0.12737512588500977
+    Expected -2sigma: 0.089263916015625
+    Expected Limit: 0.1953125
   1600:
-    Expected +1sigma: 0.05682767182588577
-    Expected +2sigma: 0.0871218666434288
-    Expected -1sigma: 0.015199065208435059
-    Expected -2sigma: 0.00855255126953125
-    Expected Limit: 0.02880859375
+    Expected +1sigma: 0.2427079975605011
+    Expected +2sigma: 0.3751613199710846
+    Expected -1sigma: 0.09629809856414795
+    Expected -2sigma: 0.0669708251953125
+    Expected Limit: 0.150390625
   1800:
-    Expected +1sigma: 0.07266627252101898
-    Expected +2sigma: 0.1140034943819046
-    Expected -1sigma: 0.01963871717453003
-    Expected -2sigma: 0.010868072509765625
-    Expected Limit: 0.03759765625
+    Expected +1sigma: 0.20169945061206818
+    Expected +2sigma: 0.3179146945476532
+    Expected -1sigma: 0.07723495364189148
+    Expected -2sigma: 0.052661895751953125
+    Expected Limit: 0.12255859375
   2000:
-    Expected +1sigma: 0.0941988006234169
-    Expected +2sigma: 0.14658193290233612
-    Expected -1sigma: 0.024981290102005005
-    Expected -2sigma: 0.013973236083984375
-    Expected Limit: 0.04833984375
+    Expected +1sigma: 0.16876469552516937
+    Expected +2sigma: 0.27053576707839966
+    Expected -1sigma: 0.06276988983154297
+    Expected -2sigma: 0.042449951171875
+    Expected Limit: 0.1015625
   2200:
-    Expected +1sigma: 0.12654989957809448
-    Expected +2sigma: 0.19692321121692657
-    Expected -1sigma: 0.033560723066329956
-    Expected -2sigma: 0.018772125244140625
-    Expected Limit: 0.06494140625
+    Expected +1sigma: 0.1513298749923706
+    Expected +2sigma: 0.24444173276424408
+    Expected -1sigma: 0.05476731061935425
+    Expected -2sigma: 0.03664970397949219
+    Expected Limit: 0.08935546875
   2400:
-    Expected +1sigma: 0.16746453940868378
-    Expected +2sigma: 0.2605901062488556
-    Expected -1sigma: 0.04441118240356445
-    Expected -2sigma: 0.02484130859375
-    Expected Limit: 0.0859375
+    Expected +1sigma: 0.1373290717601776
+    Expected +2sigma: 0.22320924699306488
+    Expected -1sigma: 0.0483737587928772
+    Expected -2sigma: 0.03202247619628906
+    Expected Limit: 0.07958984375
   2600:
-    Expected +1sigma: 0.22926989197731018
-    Expected +2sigma: 0.3538840711116791
-    Expected -1sigma: 0.060308367013931274
-    Expected -2sigma: 0.033733367919921875
-    Expected Limit: 0.11669921875
+    Expected +1sigma: 0.1263764500617981
+    Expected +2sigma: 0.20841798186302185
+    Expected -1sigma: 0.04360377788543701
+    Expected -2sigma: 0.0286102294921875
+    Expected Limit: 0.0732421875
   3000:
-    Expected +1sigma: 0.45654773712158203
-    Expected +2sigma: 0.7018597722053528
-    Expected -1sigma: 0.11960738897323608
-    Expected -2sigma: 0.06690216064453125
-    Expected Limit: 0.2314453125
+    Expected +1sigma: 0.11240849643945694
+    Expected +2sigma: 0.18745234608650208
+    Expected -1sigma: 0.037416934967041016
+    Expected -2sigma: 0.02398681640625
+    Expected Limit: 0.06396484375
   3500:
-    Expected +1sigma: 1.1651593446731567
-    Expected +2sigma: 1.776933193206787
-    Expected -1sigma: 0.2995491027832031
-    Expected -2sigma: 0.16937255859375
-    Expected Limit: 0.5859375
+    Expected +1sigma: 0.1039644256234169
+    Expected +2sigma: 0.17612206935882568
+    Expected -1sigma: 0.03338652849197388
+    Expected -2sigma: 0.02088165283203125
+    Expected Limit: 0.05810546875
 combine:
   700:
-    Expected +1sigma: 0.012420143000781536
-    Expected +2sigma: 0.018872160464525223
-    Expected -1sigma: 0.0033473968505859375
-    Expected -2sigma: 0.001983642578125
-    Expected Limit: 0.00634765625
+    Expected +1sigma: 7.565456390380859
+    Expected +2sigma: 8.904726028442383
+    Expected -1sigma: 4.987964630126953
+    Expected -2sigma: 4.28271484375
+    Expected Limit: 6.125
   800:
-    Expected +1sigma: 0.008598560467362404
-    Expected +2sigma: 0.013065341860055923
-    Expected -1sigma: 0.002506256103515625
-    Expected -2sigma: 0.001373291015625
-    Expected Limit: 0.00439453125
+    Expected +1sigma: 1.1711173057556152
+    Expected +2sigma: 1.616806983947754
+    Expected -1sigma: 0.5734875202178955
+    Expected -2sigma: 0.4177703857421875
+    Expected Limit: 0.81640625
   900:
-    Expected +1sigma: 0.008598560467362404
-    Expected +2sigma: 0.013065341860055923
-    Expected -1sigma: 0.002506256103515625
-    Expected -2sigma: 0.001373291015625
-    Expected Limit: 0.00439453125
+    Expected +1sigma: 1.165813684463501
+    Expected +2sigma: 1.5904849767684937
+    Expected -1sigma: 0.6142487525939941
+    Expected -2sigma: 0.47674560546875
+    Expected Limit: 0.8359375
   1000:
-    Expected +1sigma: 0.00982425082474947
-    Expected +2sigma: 0.015925932675600052
-    Expected -1sigma: 0.003063201904296875
-    Expected -2sigma: 0.001678466796875
-    Expected Limit: 0.00537109375
+    Expected +1sigma: 0.5528771877288818
+    Expected +2sigma: 0.7846418023109436
+    Expected -1sigma: 0.2574806213378906
+    Expected -2sigma: 0.1904296875
+    Expected Limit: 0.375
   1200:
-    Expected +1sigma: 0.012420143000781536
-    Expected +2sigma: 0.018872160464525223
-    Expected -1sigma: 0.0033473968505859375
-    Expected -2sigma: 0.001983642578125
-    Expected Limit: 0.00634765625
+    Expected +1sigma: 0.3515511453151703
+    Expected +2sigma: 0.5082546472549438
+    Expected -1sigma: 0.15839582681655884
+    Expected -2sigma: 0.11487579345703125
+    Expected Limit: 0.2333984375
   1400:
-    Expected +1sigma: 0.017264999449253082
-    Expected +2sigma: 0.027868982404470444
-    Expected -1sigma: 0.004693031311035156
-    Expected -2sigma: 0.0026092529296875
-    Expected Limit: 0.00927734375
+    Expected +1sigma: 0.2569367587566376
+    Expected +2sigma: 0.3781815469264984
+    Expected -1sigma: 0.1120046079158783
+    Expected -2sigma: 0.07981491088867188
+    Expected Limit: 0.16748046875
   1600:
-    Expected +1sigma: 0.023884890601038933
-    Expected +2sigma: 0.03670620918273926
-    Expected -1sigma: 0.006449222564697266
-    Expected -2sigma: 0.0034332275390625
-    Expected Limit: 0.01220703125
+    Expected +1sigma: 0.2063985913991928
+    Expected +2sigma: 0.30744504928588867
+    Expected -1sigma: 0.08794450759887695
+    Expected -2sigma: 0.062774658203125
+    Expected Limit: 0.1328125
   1800:
-    Expected +1sigma: 0.03316636383533478
-    Expected +2sigma: 0.051673948764801025
-    Expected -1sigma: 0.00920414924621582
-    Expected -2sigma: 0.00507354736328125
-    Expected Limit: 0.01708984375
+    Expected +1sigma: 0.16618850827217102
+    Expected +2sigma: 0.25412142276763916
+    Expected -1sigma: 0.06659576296806335
+    Expected -2sigma: 0.046314239501953125
+    Expected Limit: 0.10400390625
   2000:
-    Expected +1sigma: 0.04605143144726753
-    Expected +2sigma: 0.0723375678062439
-    Expected -1sigma: 0.01209723949432373
-    Expected -2sigma: 0.00710296630859375
-    Expected Limit: 0.02392578125
+    Expected +1sigma: 0.14095920324325562
+    Expected +2sigma: 0.21900634467601776
+    Expected -1sigma: 0.05477219820022583
+    Expected -2sigma: 0.03734588623046875
+    Expected Limit: 0.0869140625
   2200:
-    Expected +1sigma: 0.06496690213680267
-    Expected +2sigma: 0.10068461298942566
-    Expected -1sigma: 0.01734328269958496
-    Expected -2sigma: 0.0095977783203125
-    Expected Limit: 0.033203125
+    Expected +1sigma: 0.126966193318367
+    Expected +2sigma: 0.19843986630439758
+    Expected -1sigma: 0.04822719097137451
+    Expected -2sigma: 0.0325469970703125
+    Expected Limit: 0.0771484375
   2400:
-    Expected +1sigma: 0.09076258540153503
-    Expected +2sigma: 0.1406623274087906
-    Expected -1sigma: 0.02397194504737854
-    Expected -2sigma: 0.013408660888671875
-    Expected Limit: 0.04638671875
+    Expected +1sigma: 0.11440298706293106
+    Expected +2sigma: 0.18190841376781464
+    Expected -1sigma: 0.042340636253356934
+    Expected -2sigma: 0.0279693603515625
+    Expected Limit: 0.06884765625
   2600:
-    Expected +1sigma: 0.1289784163236618
-    Expected +2sigma: 0.19988857209682465
-    Expected -1sigma: 0.03406539559364319
-    Expected -2sigma: 0.019054412841796875
-    Expected Limit: 0.06591796875
+    Expected +1sigma: 0.10617300868034363
+    Expected +2sigma: 0.1695299595594406
+    Expected -1sigma: 0.038418084383010864
+    Expected -2sigma: 0.025096893310546875
+    Expected Limit: 0.06298828125
   3000:
-    Expected +1sigma: 0.26764142513275146
-    Expected +2sigma: 0.41311153769493103
-    Expected -1sigma: 0.07040181756019592
-    Expected -2sigma: 0.039379119873046875
-    Expected Limit: 0.13623046875
+    Expected +1sigma: 0.09432385861873627
+    Expected +2sigma: 0.15343429148197174
+    Expected -1sigma: 0.03282797336578369
+    Expected -2sigma: 0.021121978759765625
+    Expected Limit: 0.05517578125
   3500:
-    Expected +1sigma: 0.7262826561927795
-    Expected +2sigma: 1.107621669769287
-    Expected -1sigma: 0.1877332329750061
-    Expected -2sigma: 0.1055755615234375
-    Expected Limit: 0.365234375
+    Expected +1sigma: 0.0862729400396347
+    Expected +2sigma: 0.14150501787662506
+    Expected -1sigma: 0.02860736846923828
+    Expected -2sigma: 0.01849365234375
+    Expected Limit: 0.04931640625
